--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,11 +1,14 @@
 .home {
   min-height: 100vh;
+  width: 100%;
   background: #ffffff;
 }
 
 .home__body {
   display: flex;
   align-items: stretch;
+  width: 100%;
+  height: auto;
 }
 
 .home__content {
