--- a/frontend/src/styles/PokemonCard.css
+++ b/frontend/src/styles/PokemonCard.css
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 8px;
   padding: 4px 24px;
-  margin: 8px;
+  margin: 4px 0px;
   border-radius: 999px;
   background: #ffffff;
   box-shadow: 0 8px 18px rgba(0, 0, 0, 0.14);
@@ -12,7 +12,7 @@
 .poke-profile {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 8px;
   width: 100%;
 }
 
