--- a/frontend/src/styles/reset.css
+++ b/frontend/src/styles/reset.css
@@ -2,4 +2,13 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+html, #root {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
