--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,6 +1,12 @@
+:root {
+  --navbar-height: 60px;
+}
+
 .navbar {
   position: sticky;
   top: 0;
+  height: var(--navbar-height);
+  box-sizing: border-box;
   width: 100%;
   display: flex;
   align-items: center;
