--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -6,18 +6,11 @@
 }
 
 .home__body {
-  align-items: stretch;
-  width: 100%;
-
   display: flex;
-  height: 100vh;
+  width: 100%;
+  height: calc(100vh - var(--navbar-height)); /* 뷰포트에서 nav 높이만큼 뺌 */
+
+  align-items: stretch;
   overflow: hidden;
 }
 
-.home__content {
-  flex: 1;
-  padding: 16px;
-  color: #1b2a41;
-  height: 100vh;
-  overflow-y: auto;
-}
