--- a/frontend/src/styles/PokemonCard.css
+++ b/frontend/src/styles/PokemonCard.css
@@ -1,10 +1,16 @@
 .poke-card {
   display: flex;
   align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+  
+  cursor: pointer;
+
   gap: 8px;
   padding: 4px 24px;
   margin: 0px;
   border-radius: 999px;
+  border: none;
   background: #ffffff;
   box-shadow: 0 8px 18px rgba(0, 0, 0, 0.14);
 }
