--- a/frontend/src/styles/PokemonDetail.css
+++ b/frontend/src/styles/PokemonDetail.css
@@ -24,3 +24,16 @@
     min-height: 0;
     overflow-y: auto;
 }
+
+.poke-detail {
+    padding: 8px;
+    gap: 48px;
+}
+
+.base-info {
+    display: flex;
+    width: 100%;
+
+    background-color: #ffffff;
+    border-radius: 5px;;
+}
